2015-07-08 Erwin Waterlander <waterlan@xs4all.nl>
	* dos2unix.c, unix2dos.c, common.c: Unicode file name support
	  requires D2U_WINWIDE to be defined. There is still a problem
	  with globbing Unicode file names.

2015-07-07 Erwin Waterlander <waterlan@xs4all.nl>
	* common.c: Fix d2u_printf() to print Unicode properly in the
	  Windows Console. This required C++.
	* mingw*.mak: Use g++ instead of gcc.
	* vc.mk: Added library shell32.lib for wide arguments.

2015-07-06 Erwin Waterlander <waterlan@xs4all.nl>
	* dos2unix.c, unix2dos.c, common.c: Support Unicode file names
	  on Windows.

2015-07-01 Erwin Waterlander <waterlan@xs4all.nl>
	* Version 7.2.3

2015-06-27 Erwin Waterlander <waterlan@xs4all.nl>
	* Makefile: Enable UTF-16 by default for MSYS, because MSYS2 supports it.
	  For compilation on MSYS1 you have to disable it.
	* common.c: Don't print "converting file ... to ..." when there was an error.
	* common.c: Fixed false warning while reading BOM from zero byte file.
	  Was introduced on 2015-06-24.

2015-06-24 Erwin Waterlander <waterlan@xs4all.nl>
	* common.c: Bug fix. Check for file I/O errors with every file access.

2015-06-23 Erwin Waterlander <waterlan@xs4all.nl>
	* dos2unix.c, unix2dos.c: Bug fix. Check for file I/O errors
	  with every file access. Thanks to report of Philip Rowlands.
	  http://sourceforge.net/p/dos2unix/bugs/12/
	* common.c: New functions d2u_getc_error, d2u_putc_error, and
	  d2u_putwc_error for printing error messages.

2015-05-27 Erwin Waterlander <waterlan@xs4all.nl>
	* common.c: Fix compilation for msys.

2015-05-22 Erwin Waterlander <waterlan@xs4all.nl>
	* Version 7.2.2
	* djgpp.mak: Fixed target strip.

2015-05-11 Erwin Waterlander <waterlan@xs4all.nl>
	* test/utf16.t: Added 2 tests with invalid surrogate pair.
	* dos2unix.c, unix2dos.c: Print line number when UTF-16 conversion
	  error occurs.
	* dos2unix.c, unix2dos.c: Don't print number of converted lines in
	  verbose mode when error occurs.
