@@ -289,6 +289,10 @@ endif
 ifdef UCS
 	EXTRA_CFLAGS += -DD2U_UNICODE
 endif
+ifdef UNIFILE
+	EXTRA_CFLAGS += -DD2U_UNIFILE
+endif
+
 
 ifdef LFS
 	EXTRA_CFLAGS += -D_LARGEFILE_SOURCE -D_FILE_OFFSET_BITS=64
