@@ -507,11 +507,13 @@ int main (int argc, char *argv[])
 # ifdef __MINGW64__
   int _dowildcard = -1; /* enable wildcard expansion for Win64 */
 # endif
-#ifdef D2U_WINWIDE
+#ifdef D2U_UNIFILE
   wchar_t **wargv;
 
   /* This does not support wildcard expansion (globbing), witch is a big drawback */
   wargv = CommandLineToArgvW(GetCommandLineW(), &argc);
+
+  glob_warg(argc, wargv, NULL);
 # endif
 
   progname[8] = '\0';
@@ -560,13 +562,13 @@ int main (int argc, char *argv[])
 
 #ifdef D2U_UNICODE
   return parse_options(argc, argv,
-# ifdef D2U_WINWIDE
+# ifdef D2U_UNIFILE
     wargv,
 # endif
     pFlag, localedir, progname, PrintLicense, ConvertDosToUnix, ConvertDosToUnixW);
 #else
   return parse_options(argc, argv,
-# ifdef D2U_WINWIDE
+# ifdef D2U_UNIFILE
     wargv,
 # endif
     pFlag, localedir, progname, PrintLicense, ConvertDosToUnix);
