@@ -19,6 +19,7 @@ CRT_GLOB_OBJ = /mingw64/x86_64-w64-mingw32/lib/CRT_glob.o
 
 prefix=c:/usr/local64
 ENABLE_NLS=
+UNIFILE=1
 
 ifdef ENABLE_NLS
 LIBS_EXTRA = -lintl -liconv
@@ -27,7 +28,7 @@ endif
 LIBS_EXTRA += $(CRT_GLOB_OBJ)
 
 all:
-	$(MAKE) all EXE=.exe ENABLE_NLS=$(ENABLE_NLS) LIBS_EXTRA="$(LIBS_EXTRA)" prefix=$(prefix) LINK="cp -f" CC=$(CC) CFLAGS_OS=-I/mingw64/include
+	$(MAKE) all EXE=.exe ENABLE_NLS=$(ENABLE_NLS) LIBS_EXTRA="$(LIBS_EXTRA)" prefix=$(prefix) LINK="cp -f" CC=$(CC) CFLAGS_OS=-I/mingw64/include UNIFILE=$(UNIFILE)
 
 test: all
 	cd test; $(MAKE) test
@@ -35,7 +36,7 @@ test: all
 check: test
 
 install:
-	$(MAKE) install EXE=.exe ENABLE_NLS=$(ENABLE_NLS) LIBS_EXTRA="$(LIBS_EXTRA)" prefix=$(prefix) LINK="cp -f" CC=$(CC) CFLAGS_OS=-I/mingw64/include
+	$(MAKE) install EXE=.exe ENABLE_NLS=$(ENABLE_NLS) LIBS_EXTRA="$(LIBS_EXTRA)" prefix=$(prefix) LINK="cp -f" CC=$(CC) CFLAGS_OS=-I/mingw64/include UNIFILE=$(UNIFILE)
 
 uninstall:
 	$(MAKE) uninstall EXE=.exe prefix=$(prefix)
